--- a/index.html
+++ b/index.html
@@ -7,69 +7,78 @@
     <title>Research engine</title>
 </head>
 <body>
-    <div class="container">
-        <div class="header">
-            <div class="profile-cont">
-                <img src="./src/profile.png" alt="" class="profile-img">
+    <div class="main-cont">
+        <div class="container" id="content">
+            <div class="sidebar" id="sidebar">
+                <h2>Sidebar Menu</h2>
+                <p>Some content inside the sidebar...</p>
             </div>
-            <div class="head-title">
-                <img src="./src/logo.png" alt="">
-                <h1>Welcome to Title</h1>
-                <p>Multi-Media Research AI Engine</p>
-            </div>
-        </div>
-        <div class="card-cont">
-            <div class="card">
-                <div class="card-val">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat, unde.</p>
+            <div class="header">
+                <div class="profile-cont">
+                    <img src="./src/sidebar.png " alt="Toggle Sidebar" onclick="toggleSidebar()" class="sidebar-img toggle-btn">    
+                    <img src="./src/profile.png" alt="" class="profile-img">
                 </div>
-                <div class="card-val">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat, unde.</p>
-                </div>
-                <div class="card-val">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat, unde.</p>
-                </div>
-                <div class="card-val">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat, unde.</p>
+                <div class="head-title">
+                    <img src="./src/logo.png" alt="">
+                    <h1>Welcome to Title</h1>
+                    <p>Multi-Media Research AI Engine</p>
                 </div>
             </div>
-            <div class="card">
-                <div class="card-val">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat, unde.</p>
+            <div class="card-cont">
+                <div class="card">
+                    <div class="card-val">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat, unde.</p>
+                    </div>
+                    <div class="card-val">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat, unde.</p>
+                    </div>
+                    <div class="card-val">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat, unde.</p>
+                    </div>
+                    <div class="card-val">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat, unde.</p>
+                    </div>
                 </div>
-                <div class="card-val">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat, unde.</p>
+                <div class="card">
+                    <div class="card-val">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat, unde.</p>
+                    </div>
+                    <div class="card-val">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat, unde.</p>
+                    </div>
+                    <div class="card-val">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat, unde.</p>
+                    </div>
+                    <div class="card-val">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat, unde.</p>
+                    </div>
                 </div>
-                <div class="card-val">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat, unde.</p>
-                </div>
-                <div class="card-val">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat, unde.</p>
+                <div class="card">
+                    <div class="card-val">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat, unde.</p>
+                    </div>
+                    <div class="card-val">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat, unde.</p>
+                    </div>
+                    <div class="card-val">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat, unde.</p>
+                    </div>
+                    <div class="card-val">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat, unde.</p>
+                    </div>
                 </div>
             </div>
-            <div class="card">
-                <div class="card-val">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat, unde.</p>
+            <div class="search-bar">
+                <div class="input-cont">
+                    <input type="text" name="" id="" placeholder="Write a message here..">
                 </div>
-                <div class="card-val">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat, unde.</p>
+                <div class="send-cont">
+                    <button class="send-btn"><img src="./src/send-img.png" alt="send-img" class="send-img" ></button>
                 </div>
-                <div class="card-val">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat, unde.</p>
-                </div>
-                <div class="card-val">
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat, unde.</p>
-                </div>
-            </div>
-        </div>
-        <div class="search-bar">
-            <div class="input-cont">
-                <input type="text" name="" id="" placeholder="Write a message here..">
-            </div>
-            <div class="send-cont">
-                <button class="send-btn"><img src="./src/send-img.png" alt="send-img" class="send-img" ></button>
             </div>
         </div>
     </div>
+    
+    <script src="./script.js"></script>
 </body>
 </html>
