--- a/index.html
+++ b/index.html
@@ -10,8 +10,63 @@
     <div class="main-cont">
         <div class="container" id="content">
             <div class="sidebar" id="sidebar">
-                <h2>Sidebar Menu</h2>
-                <p>Some content inside the sidebar...</p>
+                <div class="sidebar-head">
+                    <div class="sidebar-img-cont">
+                        <img src="./src/logo.png" alt="" class="sidebar-img">
+                    </div>
+                    <div class="sidebar-title">
+                        <h1>Welcome to Title</h1>
+                        <p>Multi-Media Research AI Engine</p>
+                    </div>
+                </div>
+                <hr>
+                <div class="new-chat-cont" onclick="reloadPage()">
+                    <div class="new-chat">
+                        <div class="new-chat-img-cont">
+                            <img src="./src/Plus.png" alt="" class="new-chat-img">
+                        </div>
+                        <div class="new-chat-text">
+                            <h3 class="new-chat-text">New Chat</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="history">
+                    <div class="history-text-cont">
+                        <img src="./src/msg.png" alt="" class="history-msg">
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </div>
+                    <div class="history-text-cont">
+                        <img src="./src/msg.png" alt="" class="history-msg">
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </div>
+                    <div class="history-text-cont">
+                        <img src="./src/msg.png" alt="" class="history-msg">
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </div>
+                    <div class="history-text-cont">
+                        <img src="./src/msg.png" alt="" class="history-msg">
+                        <p>Lorem ipsum dolor sit amet.</p>
+                    </div>
+                </div>
+                <hr>
+                <div class="other-utils">
+                    <div class="Hist-cont">
+                        <img src="./src/history.png" alt="" class="icons">
+                        <h2>History</h2>
+                    </div>
+                    <div class="Profile-cont">
+                        <img src="./src/profile.png" alt="" class="icons">
+                        <h2>Profile</h2>
+                    </div>
+                    <div class="Setting-cont">
+                        <img src="./src/Settings.png" alt="" class="icons">
+                        <h2>Settings</h2>
+                    </div>
+                    <div class="Logout-cont">
+                        <img src="./src/Logout.png" alt="" class="icons">
+                        <h2>Logout</h2>
+                    </div>
+                </div>
             </div>
             <div class="header">
                 <div class="profile-cont">
@@ -24,7 +79,7 @@
                     <p>Multi-Media Research AI Engine</p>
                 </div>
             </div>
-            <div class="card-cont">
+            <div class="card-cont" id="card">
                 <div class="card">
                     <div class="card-val">
                         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quaerat, unde.</p>
@@ -68,9 +123,10 @@
                     </div>
                 </div>
             </div>
+            <div id="results"></div>
             <div class="search-bar">
                 <div class="input-cont">
-                    <input type="text" name="" id="" placeholder="Write a message here..">
+                    <input type="text" name="" id="search" placeholder="Write a message here.." onkeyup="searchUniversity()">
                 </div>
                 <div class="send-cont">
                     <button class="send-btn"><img src="./src/send-img.png" alt="send-img" class="send-img" ></button>
