--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Research Engine</title>
+    <link rel="shortcut icon" href="src/logo.png" type="image/x-icon">
+    <title>UniSphere</title>
 </head>
 <body>
     <div class="main-cont">
